Update LocalPDF website to match actual app features
Remove false AI chat/summarize/OCR claims and replace with accurate
descriptions of the 10 actual tools: Compress, Batch Compress, Merge,
Split, Protect/Unlock (AES-256), Watermark, Image to PDF, PDF to Image,
PPT to PDF, and PDF Page Editor. Update system requirements, comparison
targets, testimonials, and FAQs across all 8 languages.

--- a/localpdf/translations/ar.json
+++ b/localpdf/translations/ar.json
@@ -5,37 +5,37 @@
   "nav": {
     "features": "المميزات",
     "use_cases": "حالات الاستخدام",
-    "notify": "أبلغني",
+    "notify": "تحميل",
     "github": "GitHub"
   },
   "hero": {
-    "badge": "قريباً",
-    "title": "مستنداتك.<br>خصوصيتك.<br><span class='gradient-text'>مساعدك الذكي.</span>",
-    "subtitle": "LocalPDF هو مجموعة أدوات PDF مدعومة بالذكاء الاصطناعي تضع الخصوصية أولاً. تحدث مع ملفات PDF، واستخرج الرؤى الرئيسية، وأنشئ ملخصات المستندات — كل شيء يعمل 100% على جهازك. بدون سحابة. بدون رفع ملفات. بدون تنازلات.",
-    "cta_notify": "أبلغني عند الإطلاق",
+    "badge": "متاح الآن — مجاني ومفتوح المصدر",
+    "title": "مستنداتك.<br>خصوصيتك.<br><span class='gradient-text'>مجموعة أدوات PDF الخاصة بك.</span>",
+    "subtitle": "LocalPDF هو مجموعة أدوات PDF كاملة تضع الخصوصية أولاً. اضغط، ادمج، قسّم، احمِ، أضف علامة مائية، حوّل وعدّل مستنداتك — كل شيء يعمل 100% على جهازك. بدون سحابة. بدون رفع ملفات. بدون تنازلات.",
+    "cta_notify": "⬇ تحميل لنظام macOS",
     "cta_features": "استكشف المميزات"
   },
   "social_proof": {
     "local": "معالجة محلية",
-    "chat": "محادثة PDF",
+    "tools": "أدوات PDF",
     "free": "مجاني للأبد",
     "opensource": "مفتوح المصدر"
   },
   "product": {
     "label": "المنتج",
-    "title": "LocalPDF:<br><span class='gradient-text'>أدوات PDF الذكية التي تحترمك</span>",
-    "subtitle": "مجموعة قوية من أدوات PDF المدعومة بالذكاء الاصطناعي تعمل بالكامل على جهازك. لا حاجة للسحابة.",
-    "feature1_title": "محادثة PDF",
-    "feature1_desc": "اطرح أسئلة حول المستندات بلغة طبيعية. احصل على إجابات مع مراجع لأرقام الصفحات.",
-    "feature2_title": "ملخصات ذكية",
-    "feature2_desc": "ملخصات فورية للمستندات الطويلة. استخراج النقاط الرئيسية والاستنتاجات في ثوانٍ.",
-    "feature3_title": "استخراج المعلومات",
-    "feature3_desc": "استخراج تلقائي للبيانات المهيكلة من العقود والفواتير والتقارير.",
-    "feature4_title": "معالجة دفعية",
-    "feature4_desc": "معالجة ملفات PDF متعددة في وقت واحد. تلخيص مجلد كامل من التقارير دفعة واحدة.",
-    "feature5_title": "خصوصية كاملة",
-    "feature5_desc": "يعمل بالكامل بدون اتصال. المستندات الحساسة تبقى سرية.",
-    "usecases_heading": "مثالي لـ",
+    "title": "LocalPDF:<br><span class='gradient-text'>أدوات PDF التي تحترمك</span>",
+    "subtitle": "مجموعة قوية من أدوات PDF تعمل بالكامل على جهازك. لا حاجة للسحابة.",
+    "feature1_title": "ضغط وضغط دفعي",
+    "feature1_desc": "صغّر ملفات PDF بإعدادات ذكية مسبقة (بريد إلكتروني، ويب، طباعة). عالج مئات الملفات دفعة واحدة بالوضع الدفعي.",
+    "feature2_title": "دمج وتقسيم",
+    "feature2_desc": "ادمج عدة ملفات PDF في ملف واحد أو قسّم PDF حسب الصفحات أو النطاقات أو إلى ملفات فردية. إعادة ترتيب بالسحب والإفلات.",
+    "feature3_title": "حماية وعلامة مائية",
+    "feature3_desc": "أضف كلمات مرور AES-256، حدد الصلاحيات، أو أضف علامات مائية نصية وصورية مع معاينة مباشرة. افتح ملفات PDF المحمية بكلمة مرور أيضاً.",
+    "feature4_title": "تحويل كل شيء",
+    "feature4_desc": "صورة إلى PDF، PDF إلى صورة (PNG/JPEG بدقة 72-600 DPI)، PPT/PPTX إلى PDF. اسحب وأفلت صوراً متعددة مع دعم إعادة الترتيب.",
+    "feature5_title": "محرر صفحات PDF",
+    "feature5_desc": "عدّل صفحات PDF بالتعليقات التوضيحية وأداة المسح وطبقات النص وختم الصور ودعم التوقيع. إدارة كاملة للصفحات مع الإدراج وإعادة الترتيب.",
+    "usecases_heading": "10 أدوات في تطبيق واحد",
     "usecase1": "المستندات القانونية",
     "usecase2": "الأوراق البحثية",
     "usecase3": "التقارير المالية",
@@ -46,36 +46,36 @@
   "use_cases": {
     "label": "حالات الاستخدام",
     "title": "مصمم لـ<span class='gradient-text'>المحترفين الحقيقيين</span>",
-    "subtitle": "من المحامين الذين يحمون بيانات عملائهم إلى الباحثين الذين يحللون الأوراق — يخدم LocalPDF احتياجات متنوعة بوعد واحد أساسي: مستنداتك تبقى ملكك."
+    "subtitle": "من المحامين الذين يحمون بيانات عملائهم إلى الباحثين الذين ينظمون أوراقهم — يخدم LocalPDF احتياجات متنوعة بوعد واحد أساسي: مستنداتك تبقى ملكك."
   },
   "use_cases_cards": {
     "legal": {
-      "title": "المحامون",
-      "problem": "<strong>المشكلة:</strong> رفع العقود والشهادات إلى خدمات الذكاء الاصطناعي السحابية يعرض امتياز السرية بين المحامي والموكل للخطر.",
-      "solution": "<strong>الحل:</strong> حلل العقود واستخرج البنود ولخص الشهادات بالكامل على جهازك. صفر تسريب للبيانات."
+      "title": "المحترفون القانونيون",
+      "problem": "<strong>المشكلة:</strong> رفع العقود والشهادات إلى خدمات PDF السحابية يعرض امتياز السرية بين المحامي والموكل للخطر.",
+      "solution": "<strong>الحل:</strong> ادمج وقسّم واحمِ وأضف علامة مائية للمستندات القانونية بالكامل على جهازك. صفر تعرض."
     },
     "researchers": {
       "title": "الباحثون",
-      "problem": "<strong>المشكلة:</strong> المراجعة اليدوية لمئات الأوراق الأكاديمية تستغرق أسابيع. الأدوات السحابية تعرض البيانات غير المنشورة للخطر.",
-      "solution": "<strong>الحل:</strong> تلخيص الأوراق دفعياً واستخراج المنهجيات والمحادثة مع المستندات بخصوصية. مثالي لمراجعات الأدبيات."
+      "problem": "<strong>المشكلة:</strong> المراجعة اليدوية لمئات الأوراق البحثية تستغرق أسابيع. الأدوات السحابية تعرض البيانات غير المنشورة للخطر.",
+      "solution": "<strong>الحل:</strong> اضغط دفعياً وادمج وأضف تعليقات توضيحية للأوراق البحثية بخصوصية. حوّل ونظّم المستندات بدون الاعتماد على السحابة."
     },
     "financial": {
       "title": "المحللون الماليون",
-      "problem": "<strong>المشكلة:</strong> التقارير المالية السرية وبيانات الأرباح لا يمكن رفعها إلى خدمات ذكاء اصطناعي خارجية.",
-      "solution": "<strong>الحل:</strong> استخراج المقاييس الرئيسية ومقارنة التقارير الفصلية وإنشاء الملخصات دون أن تغادر البيانات جهازك."
+      "problem": "<strong>المشكلة:</strong> التقارير المالية السرية والأرباح لا يمكن رفعها إلى خدمات PDF خارجية.",
+      "solution": "<strong>الحل:</strong> اضغط واحمِ بتشفير AES-256 وأضف علامة مائية للمستندات المالية بدون أن تغادر البيانات جهازك."
     },
     "healthcare": {
       "title": "المتخصصون في الرعاية الصحية",
       "problem": "<strong>المشكلة:</strong> لوائح HIPAA وحماية البيانات تمنع رفع سجلات المرضى إلى الخدمات السحابية.",
-      "solution": "<strong>الحل:</strong> معالجة ملفات PDF الطبية محلياً. الامتثال التلقائي لمتطلبات حماية البيانات."
+      "solution": "<strong>الحل:</strong> عالج ملفات PDF الطبية محلياً. الامتثال التلقائي لمتطلبات حماية البيانات."
     },
     "students": {
       "title": "الطلاب والمعلمون",
-      "problem": "<strong>المشكلة:</strong> اشتراكات الذكاء الاصطناعي السحابية تكلف $20-50 شهرياً — باهظة الثمن لميزانيات الطلاب.",
-      "solution": "<strong>الحل:</strong> لخص الكتب الدراسية واستخرج المفاهيم الأساسية واستعد للامتحانات. $0 للأبد."
+      "problem": "<strong>المشكلة:</strong> اشتراكات PDF السحابية تكلف $20-50 شهرياً — باهظة الثمن للطلاب.",
+      "solution": "<strong>الحل:</strong> ادمج ملاحظات المحاضرات، اضغط الكتب الدراسية، حوّل العروض التقديمية إلى PDF وأضف تعليقات توضيحية للصفحات. $0 للأبد."
     },
     "privacy": {
-      "title": "المدافعون عن الخصوصية",
+      "title": "المهتمون بالخصوصية",
       "problem": "<strong>المشكلة:</strong> أدوات PDF السحابية تخزن مستنداتك على خوادمها إلى أجل غير مسمى.",
       "solution": "<strong>الحل:</strong> مفتوح المصدر وقابل للتدقيق بالكامل. مستنداتك لا تلمس أي خادم أبداً. نقطة."
     }
@@ -83,9 +83,9 @@
   "comparison": {
     "label": "لماذا LocalPDF",
     "title": "LocalPDF مقابل <span class='gradient-text'>الخدمات السحابية</span>",
-    "subtitle": "قارن LocalPDF مع خدمات PDF الذكية الشائعة: ChatPDF وPDF.ai وAdobe Acrobat AI.",
+    "subtitle": "شاهد كيف يقارن LocalPDF بخدمات PDF السحابية الشائعة مثل Adobe Acrobat وSmallpdf وiLovePDF.",
     "roi_title": "احسب توفيرك السنوي",
-    "roi_cloud": "متوسط خدمة PDF الذكية: <strong>$40/شهر x 12 = $480/سنة</strong>",
+    "roi_cloud": "متوسط خدمة PDF السحابية: <strong>$40/شهر x 12 = $480/سنة</strong>",
     "roi_localpdf": "LocalPDF: <strong>$0/سنة</strong>",
     "roi_savings": "توفيرك: <span class='gradient-text'>$480+ كل سنة</span>"
   },
@@ -117,21 +117,21 @@
   },
   "how_it_works": {
     "title": "بسيط بالتصميم",
-    "subtitle": "بدون حسابات. بدون رفع ملفات. بدون إعدادات. حمّل، افتح PDF وابدأ المحادثة.",
+    "subtitle": "بدون حسابات. بدون رفع ملفات. بدون إعدادات. حمّل، أسقط ملفاتك وابدأ العمل.",
     "step1_title": "تحميل",
     "step1_desc": "احصل على LocalPDF لمنصتك. تطبيق واحد، جاهز للاستخدام.",
     "step2_title": "افتح PDF",
     "step2_desc": "اسحب المستند إلى LocalPDF. لن يغادر حاسوبك أبداً.",
-    "step3_title": "تحدث وحلل",
-    "step3_desc": "اطرح الأسئلة، احصل على ملخصات، استخرج البيانات — كل شيء يُعالج محلياً."
+    "step3_title": "معالجة وحفظ",
+    "step3_desc": "اضغط، ادمج، قسّم، عدّل، احمِ أو حوّل — كل شيء يُعالج محلياً."
   },
   "testimonials": {
     "label": "آراء المستخدمين",
     "title": "موثوق من <span class='gradient-text'>المحترفين في جميع أنحاء الهند</span>",
     "subtitle": "من المحامين إلى المحللين الماليين، يخدم LocalPDF احتياجات متنوعة بوعد واحد أساسي: مستنداتك تبقى ملكك.",
-    "t1_text": "\"أحلل عشرات العقود أسبوعياً. LocalPDF يتيح لي استخراج البنود الرئيسية والتحدث مع المستندات القانونية دون كشف بيانات العملاء للخوادم السحابية. امتياز السرية محفوظ. هكذا يجب أن تعمل أدوات الذكاء الاصطناعي القانونية.\"",
-    "t2_text": "\"معالجة تقارير الأرباح السرية والبيانات المالية عبر الذكاء الاصطناعي السحابي لم تكن خياراً لنا أبداً. LocalPDF غيّر كل شيء — يمكنني تلخيص التقارير الفصلية واستخراج المقاييس الرئيسية ومقارنة المستندات. كل شيء بدون اتصال، كل شيء خاص.\"",
-    "t3_text": "\"أراجع أكثر من 50 ورقة أكاديمية لكل مراجعة أدبيات. LocalPDF يلخص مجلدات كاملة من ملفات PDF دفعياً، ويستخرج المنهجيات، ويتيح لي المحادثة مع الأوراق للبحث عن تفاصيل محددة. يوفر لي أسابيع من العمل كل فصل دراسي. وهو مجاني تماماً.\""
+    "t1_text": "\"أتعامل مع عشرات العقود أسبوعياً. LocalPDF يتيح لي دمج وتقسيم وحماية وإضافة علامة مائية للمستندات القانونية دون كشف بيانات العملاء للخوادم السحابية. امتياز السرية بين المحامي والموكل محفوظ. هكذا يجب أن تعمل أدوات PDF للمحترفين القانونيين.\"",
+    "t2_text": "\"معالجة تقارير الأرباح السرية والبيانات المالية عبر أدوات PDF السحابية لم تكن خياراً لنا أبداً. LocalPDF غيّر كل شيء — يمكنني الضغط والحماية بالتشفير والمعالجة الدفعية للمستندات. كل شيء بدون اتصال، كل شيء خاص.\"",
+    "t3_text": "\"أتعامل مع أكثر من 50 ورقة بحثية لكل مراجعة أدبيات. LocalPDF يتيح لي ضغط مجلدات كاملة دفعياً، ودمج الأوراق المتعلقة، وإضافة تعليقات توضيحية، وتحويل العروض التقديمية إلى PDF. يوفر لي ساعات من العمل كل فصل دراسي. وهو مجاني تماماً.\""
   },
   "faq": {
     "label": "الأسئلة الشائعة",
@@ -140,15 +140,15 @@
   "faq_items": {
     "q1": {
       "question": "كيف يمكن أن يكون مجانياً بالكامل؟",
-      "answer": "LocalPDF يعمل بالكامل على جهازك، لذا تكاليف البنية التحتية السحابية لدينا صفر. لا خوادم، لا نطاق ترددي. نؤمن بأن الذكاء الاصطناعي يجب أن يكون متاحاً للجميع. الكود مفتوح المصدر برخصة MIT — تحقق بنفسك."
+      "answer": "LocalPDF يعمل بالكامل على جهازك، لذا ليس لدينا أي تكاليف بنية تحتية سحابية. لا خوادم للصيانة، لا نطاق ترددي للدفع. نؤمن بأن أدوات PDF يجب أن تكون متاحة للجميع. الكود مفتوح المصدر برخصة MIT — تحقق بنفسك."
     },
     "q2": {
-      "question": "ما مدى دقة تحليل الذكاء الاصطناعي؟",
-      "answer": "يستخدم LocalPDF نماذج ذكاء اصطناعي متقدمة مفتوحة المصدر محسّنة لفهم المستندات. بينما قد تستخدم الخدمات السحابية نماذج أكبر، توفر نماذجنا المحلية دقة ممتازة للتلخيص والأسئلة والأجوبة واستخراج البيانات — مع ميزة حاسمة: مستنداتك لا تغادر الجهاز أبداً."
+      "question": "ما أدوات PDF المتضمنة؟",
+      "answer": "يتضمن LocalPDF 10 أدوات: ضغط، ضغط دفعي، دمج، تقسيم، حماية/فتح القفل (AES-256)، علامة مائية (نص وصورة مع معاينة مباشرة)، صورة إلى PDF، PDF إلى صورة، PPT إلى PDF، ومحرر صفحات PDF كامل مع تعليقات توضيحية وأداة مسح ودعم توقيع."
     },
     "q3": {
-      "question": "هل يعمل بدون إنترنت؟",
-      "answer": "بالتأكيد! بعد تحميل النموذج الأولي (مرة واحدة عند التشغيل الأول)، يعمل LocalPDF بنسبة 100% بدون اتصال. حلل المستندات في الطائرة أو في مواقع بعيدة أو في بيئات معزولة."
+      "question": "هل يعمل بدون اتصال بالإنترنت؟",
+      "answer": "بالتأكيد! LocalPDF يعمل 100% بدون اتصال فور التثبيت. لا تحميلات، لا إعدادات، لا إنترنت مطلوب. عالج المستندات في الطائرة أو في مواقع بعيدة أو في بيئات معزولة."
     },
     "q4": {
       "question": "هل يمكن استخدامه للعمل التجاري؟",
@@ -156,30 +156,27 @@
     },
     "q5": {
       "question": "ما أنواع وأحجام PDF المدعومة؟",
-      "answer": "يعالج LocalPDF ملفات PDF القياسية بأي حجم — بلا حدود للصفحات أو الحجم. يعمل مع ملفات PDF النصية والمستندات الممسوحة ضوئياً (مع OCR) وملفات PDF ذات المحتوى المختلط بما في ذلك الصور والجداول."
+      "answer": "يعالج LocalPDF ملفات PDF القياسية بأي حجم — بلا حدود للصفحات أو الحجم. يعمل مع ملفات PDF النصية والمستندات الغنية بالصور وملفات PDF ذات المحتوى المختلط بما في ذلك الصور والجداول."
     },
     "q6": {
       "question": "ما هي متطلبات النظام؟",
-      "answer": "<strong>الحد الأدنى:</strong> 8 جيجابايت RAM، 10 جيجابايت مساحة حرة، macOS 12+ أو Windows 10+<br><strong>الموصى به:</strong> 16 جيجابايت RAM، Apple Silicon أو NVIDIA GPU لمعالجة أسرع"
+      "answer": "<strong>الحد الأدنى:</strong> 4 جيجابايت RAM، 200 ميجابايت مساحة حرة، macOS 11.0 (Big Sur) أو أحدث<br><strong>الموصى به:</strong> 8 جيجابايت RAM، Apple Silicon لأفضل أداء. Windows وLinux قريباً."
     }
   },
   "notify": {
-    "label": "قريباً",
-    "title": "كن أول<br><span class='gradient-text'>من يعرف</span>",
-    "subtitle": "LocalPDF قيد التطوير. ضع نجمة على المستودع في GitHub ليصلك إشعار عند الإطلاق.",
-    "star_title": "نجمة على GitHub",
-    "star_desc": "احصل على إشعار عند إطلاق LocalPDF",
-    "star_cta": "تابع المستودع",
-    "discuss_title": "انضم للنقاش",
-    "discuss_desc": "شارك طلبات الميزات والأفكار",
-    "discuss_cta": "ابدأ نقاشاً",
-    "planned_heading": "الميزات المخطط لها",
-    "planned1_label": "محادثة",
-    "planned1_value": "أسئلة وأجوبة بلغة طبيعية مع PDF",
-    "planned2_label": "ملخصات",
-    "planned2_value": "ملخصات فورية لأي مستند",
-    "planned3_label": "استخراج",
-    "planned3_value": "استخراج بيانات محددة من المستندات"
+    "label": "تحميل",
+    "title": "احصل على LocalPDF<br><span class='gradient-text'>مجاني للأبد</span>",
+    "subtitle": "حمّل LocalPDF لمنصتك. تطبيق واحد، 10 أدوات PDF قوية، صفر اعتماد على السحابة.",
+    "mac_title": "تحميل لنظام macOS",
+    "mac_desc": "macOS 11.0+ • Apple Silicon أصلي • 58 ميجابايت",
+    "win_title": "Windows",
+    "win_desc": "Windows 10+ • قريباً",
+    "linux_title": "Linux",
+    "linux_desc": "Ubuntu 22.04+ • قريباً",
+    "star_title": "عرض الكود المصدري",
+    "star_desc": "رخصة MIT • مفتوح المصدر",
+    "star_cta": "مستودع GitHub",
+    "planned_heading": "متطلبات النظام"
   },
   "footer": {
     "tagline": "ذكاء اصطناعي مجاني وخاص وملكك.",
