--- a/localpdf/translations/hi.json
+++ b/localpdf/translations/hi.json
@@ -4,37 +4,37 @@
   "nav": {
     "features": "विशेषताएं",
     "use_cases": "उपयोग के मामले",
-    "notify": "सूचित करें",
+    "notify": "डाउनलोड",
     "github": "GitHub"
   },
   "hero": {
-    "badge": "जल्द आ रहा है",
-    "title": "आपके दस्तावेज़।<br>आपकी गोपनीयता।<br><span class='gradient-text'>आपका AI सहायक।</span>",
-    "subtitle": "LocalPDF PDF दस्तावेज़ों के लिए एक प्राइवेसी-फर्स्ट AI टूलकिट है। अपने PDFs से चैट करें, मुख्य अंतर्दृष्टि निकालें, और दस्तावेज़ों का सारांश बनाएं - सब कुछ 100% आपके डिवाइस पर चलता है। कोई क्लाउड नहीं। कोई अपलोड नहीं। कोई समझौता नहीं।",
-    "cta_notify": "तैयार होने पर सूचित करें",
+    "badge": "अभी उपलब्ध — मुफ्त और ओपन सोर्स",
+    "title": "आपके दस्तावेज़।<br>आपकी गोपनीयता।<br><span class='gradient-text'>आपका PDF टूलकिट।</span>",
+    "subtitle": "LocalPDF एक संपूर्ण, प्राइवेसी-फर्स्ट PDF टूलकिट है। अपने दस्तावेज़ों को कंप्रेस, मर्ज, स्प्लिट, प्रोटेक्ट, वॉटरमार्क, कन्वर्ट और एडिट करें — सब कुछ 100% आपके डिवाइस पर चलता है। कोई क्लाउड नहीं। कोई अपलोड नहीं। कोई समझौता नहीं।",
+    "cta_notify": "⬇ macOS के लिए डाउनलोड करें",
     "cta_features": "विशेषताएं देखें"
   },
   "social_proof": {
     "local": "लोकल प्रोसेसिंग",
-    "chat": "PDF से चैट करें",
+    "tools": "PDF टूल्स",
     "free": "हमेशा मुफ्त",
     "opensource": "ओपन सोर्स"
   },
   "product": {
     "label": "उत्पाद",
-    "title": "LocalPDF:<br><span class='gradient-text'>AI PDF टूल जो आपका सम्मान करते हैं</span>",
-    "subtitle": "AI-संचालित PDF टूल का एक शक्तिशाली सूट जो पूरी तरह से आपकी मशीन पर चलता है। क्लाउड की आवश्यकता नहीं।",
-    "feature1_title": "PDF से चैट करें",
-    "feature1_desc": "अपने दस्तावेज़ों के बारे में प्राकृतिक भाषा में प्रश्न पूछें। पेज संदर्भों के साथ उत्तर प्राप्त करें।",
-    "feature2_title": "स्मार्ट सारांश",
-    "feature2_desc": "लंबे दस्तावेज़ों का तुरंत सारांश प्राप्त करें। सेकंडों में मुख्य बिंदु और निष्कर्ष निकालें।",
-    "feature3_title": "जानकारी निष्कर्षण",
-    "feature3_desc": "अनुबंधों, चालानों, रिपोर्टों से विशिष्ट डेटा पॉइंट्स स्वचालित रूप से निकालें।",
-    "feature4_title": "बैच प्रोसेसिंग",
-    "feature4_desc": "एक साथ कई PDFs प्रोसेस करें। रिपोर्ट के एक फ़ोल्डर का एक बार में सारांश बनाएं।",
-    "feature5_title": "पूर्ण गोपनीयता",
-    "feature5_desc": "पूरी तरह से ऑफलाइन काम करता है। आपके गोपनीय दस्तावेज़ गोपनीय रहते हैं।",
-    "usecases_heading": "इनके लिए बिल्कुल सही",
+    "title": "LocalPDF:<br><span class='gradient-text'>PDF टूल जो आपका सम्मान करते हैं</span>",
+    "subtitle": "PDF टूल्स का एक शक्तिशाली सूट जो पूरी तरह से आपकी मशीन पर चलता है। क्लाउड की आवश्यकता नहीं।",
+    "feature1_title": "कंप्रेस और बैच कंप्रेस",
+    "feature1_desc": "स्मार्ट प्रीसेट (ईमेल, वेब, प्रिंट) से PDF का आकार घटाएं। बैच मोड में सैकड़ों फ़ाइलें एक साथ प्रोसेस करें।",
+    "feature2_title": "मर्ज और स्प्लिट",
+    "feature2_desc": "कई PDFs को एक में मिलाएं या PDF को पेज, रेंज, या अलग-अलग फ़ाइलों में विभाजित करें। ड्रैग-एंड-ड्रॉप से क्रम बदलें।",
+    "feature3_title": "प्रोटेक्ट और वॉटरमार्क",
+    "feature3_desc": "AES-256 पासवर्ड जोड़ें, अनुमतियां सेट करें, या टेक्स्ट और इमेज वॉटरमार्क लाइव प्रीव्यू के साथ लगाएं। पासवर्ड-प्रोटेक्टेड PDF अनलॉक भी करें।",
+    "feature4_title": "सब कुछ कन्वर्ट करें",
+    "feature4_desc": "इमेज से PDF, PDF से इमेज (PNG/JPEG 72-600 DPI पर), PPT/PPTX से PDF। कई इमेज ड्रैग-एंड-ड्रॉप करें, रीऑर्डर सपोर्ट के साथ।",
+    "feature5_title": "PDF पेज एडिटर",
+    "feature5_desc": "एनोटेशन, इरेज़र टूल, टेक्स्ट ओवरले, इमेज स्टैम्प और सिग्नेचर सपोर्ट के साथ PDF पेज एडिट करें। इन्सर्ट और रीऑर्डर के साथ पूर्ण पेज प्रबंधन।",
+    "usecases_heading": "एक ऐप में 10 टूल",
     "usecase1": "कानूनी दस्तावेज़",
     "usecase2": "शोध पत्र",
     "usecase3": "वित्तीय रिपोर्ट",
@@ -45,23 +45,23 @@
   "use_cases": {
     "label": "उपयोग के मामले",
     "title": "<span class='gradient-text'>वास्तविक पेशेवरों</span> के लिए बनाया गया",
-    "subtitle": "क्लाइंट डेटा की सुरक्षा करने वाले वकीलों से लेकर पेपर्स का विश्लेषण करने वाले शोधकर्ताओं तक — LocalPDF एक मुख्य वादे के साथ विविध आवश्यकताओं की सेवा करता है: आपके दस्तावेज़ आपके रहते हैं।"
+    "subtitle": "क्लाइंट डेटा की सुरक्षा करने वाले वकीलों से लेकर पेपर्स को व्यवस्थित करने वाले शोधकर्ताओं तक — LocalPDF एक मुख्य वादे के साथ विविध आवश्यकताओं की सेवा करता है: आपके दस्तावेज़ आपके रहते हैं।"
   },
   "use_cases_cards": {
     "legal": {
       "title": "कानूनी पेशेवर",
-      "problem": "<strong>समस्या:</strong> क्लाउड AI सेवाओं पर अनुबंध और बयान अपलोड करने से अटॉर्नी-क्लाइंट विशेषाधिकार का खतरा होता है।",
-      "solution": "<strong>समाधान:</strong> पूरी तरह से अपने डिवाइस पर अनुबंधों का विश्लेषण करें, क्लॉज़ निकालें, और बयानों का सारांश बनाएं। शून्य एक्सपोजर।"
+      "problem": "<strong>समस्या:</strong> क्लाउड PDF सेवाओं पर अनुबंध और बयान अपलोड करने से अटॉर्नी-क्लाइंट विशेषाधिकार खतरे में पड़ता है।",
+      "solution": "<strong>समाधान:</strong> अपने डिवाइस पर पूरी तरह से कानूनी दस्तावेज़ों को मर्ज, स्प्लिट, प्रोटेक्ट और वॉटरमार्क करें। शून्य एक्सपोजर।"
     },
     "researchers": {
       "title": "शोधकर्ता",
       "problem": "<strong>समस्या:</strong> सैकड़ों शोध पत्रों की मैन्युअल समीक्षा में हफ्ते लग जाते हैं। क्लाउड टूल अप्रकाशित डेटा से समझौता करते हैं।",
-      "solution": "<strong>समाधान:</strong> पेपर्स का बैच-सारांश बनाएं, कार्यप्रणालियां निकालें, और निजी तौर पर दस्तावेज़ों से चैट करें। साहित्य समीक्षा के लिए उत्तम।"
+      "solution": "<strong>समाधान:</strong> शोध पत्रों को निजी तौर पर बैच कंप्रेस, मर्ज और एनोटेट करें। क्लाउड पर निर्भरता के बिना दस्तावेज़ों को कन्वर्ट और व्यवस्थित करें।"
     },
     "financial": {
       "title": "वित्तीय विश्लेषक",
-      "problem": "<strong>समस्या:</strong> गोपनीय वित्तीय रिपोर्ट और आय को तीसरे पक्ष की AI सेवाओं पर अपलोड नहीं किया जा सकता।",
-      "solution": "<strong>समाधान:</strong> मुख्य मेट्रिक्स निकालें, त्रैमासिक रिपोर्ट की तुलना करें, और बिना डेटा आपकी मशीन छोड़े सारांश बनाएं।"
+      "problem": "<strong>समस्या:</strong> गोपनीय वित्तीय रिपोर्ट और आय को तीसरे पक्ष की PDF सेवाओं पर अपलोड नहीं किया जा सकता।",
+      "solution": "<strong>समाधान:</strong> AES-256 एन्क्रिप्शन से कंप्रेस, प्रोटेक्ट और वॉटरमार्क करें, बिना डेटा के आपकी मशीन छोड़े।"
     },
     "healthcare": {
       "title": "स्वास्थ्य सेवा पेशेवर",
@@ -70,8 +70,8 @@
     },
     "students": {
       "title": "छात्र और शिक्षक",
-      "problem": "<strong>समस्या:</strong> क्लाउड AI सब्सक्रिप्शन $20-50/महीने खर्च होते हैं — छात्रों के लिए बहुत महंगा।",
-      "solution": "<strong>समाधान:</strong> पाठ्यपुस्तकों का सारांश बनाएं, मुख्य अवधारणाएं निकालें, और परीक्षा की तैयारी करें। $0 हमेशा के लिए।"
+      "problem": "<strong>समस्या:</strong> क्लाउड PDF सब्सक्रिप्शन $20-50/महीने खर्च होते हैं — छात्रों के लिए बहुत महंगा।",
+      "solution": "<strong>समाधान:</strong> लेक्चर नोट्स मर्ज करें, पाठ्यपुस्तकें कंप्रेस करें, प्रेजेंटेशन PDF में कन्वर्ट करें और पेज एनोटेट करें। $0 हमेशा के लिए।"
     },
     "privacy": {
       "title": "गोपनीयता-सजग उपयोगकर्ता",
@@ -82,9 +82,9 @@
   "comparison": {
     "label": "LocalPDF क्यों",
     "title": "LocalPDF बनाम <span class='gradient-text'>क्लाउड सेवाएं</span>",
-    "subtitle": "देखें कि LocalPDF ChatPDF, PDF.ai और Adobe Acrobat AI जैसी लोकप्रिय AI PDF सेवाओं से कैसे तुलना करता है।",
+    "subtitle": "देखें कि LocalPDF Adobe Acrobat, Smallpdf और iLovePDF जैसी लोकप्रिय क्लाउड PDF सेवाओं से कैसे तुलना करता है।",
     "roi_title": "अपनी वार्षिक बचत की गणना करें",
-    "roi_cloud": "औसत AI PDF सेवा: <strong>$40/महीना x 12 = $480/वर्ष</strong>",
+    "roi_cloud": "औसत क्लाउड PDF सेवा: <strong>$40/महीना x 12 = $480/वर्ष</strong>",
     "roi_localpdf": "LocalPDF: <strong>$0/वर्ष</strong>",
     "roi_savings": "आप बचाते हैं: <span class='gradient-text'>हर साल $480+</span>"
   },
@@ -101,7 +101,7 @@
     "row3_feature": "पेज लिमिट",
     "row3_cloud": "50-500 पेज/महीना",
     "row3_localpdf": "असीमित",
-    "row4_feature": "फाइल साइज लिमिट",
+    "row4_feature": "फ़ाइल साइज़ लिमिट",
     "row4_cloud": "10-50 MB",
     "row4_localpdf": "कोई लिमिट नहीं",
     "row5_feature": "इंटरनेट आवश्यक",
@@ -116,21 +116,21 @@
   },
   "how_it_works": {
     "title": "डिज़ाइन से सरल",
-    "subtitle": "कोई अकाउंट नहीं। कोई अपलोड नहीं। कोई कॉन्फ़िगरेशन नहीं। बस डाउनलोड करें, अपना PDF खोलें, और चैट शुरू करें।",
+    "subtitle": "कोई अकाउंट नहीं। कोई अपलोड नहीं। कोई कॉन्फ़िगरेशन नहीं। बस डाउनलोड करें, अपनी फ़ाइलें ड्रॉप करें और काम शुरू करें।",
     "step1_title": "डाउनलोड",
     "step1_desc": "अपने प्लेटफ़ॉर्म के लिए LocalPDF प्राप्त करें। एक ऐप, उपयोग के लिए तैयार।",
     "step2_title": "PDF खोलें",
     "step2_desc": "अपना दस्तावेज़ LocalPDF में ड्रॉप करें। यह आपके कंप्यूटर से कभी नहीं जाता।",
-    "step3_title": "चैट और विश्लेषण",
-    "step3_desc": "प्रश्न पूछें, सारांश प्राप्त करें, डेटा निकालें - सब स्थानीय रूप से प्रोसेस होता है।"
+    "step3_title": "प्रोसेस और सेव करें",
+    "step3_desc": "कंप्रेस, मर्ज, स्प्लिट, एडिट, प्रोटेक्ट या कन्वर्ट करें — सब स्थानीय रूप से प्रोसेस होता है।"
   },
   "testimonials": {
     "label": "उपयोगकर्ता क्या कहते हैं",
     "title": "<span class='gradient-text'>पूरे भारत के पेशेवरों</span> का भरोसा",
     "subtitle": "वकीलों से लेकर वित्तीय विश्लेषकों तक, LocalPDF एक मुख्य वादे के साथ विविध आवश्यकताओं की सेवा करता है: आपके दस्तावेज़ आपके रहते हैं।",
-    "t1_text": "\"मैं हर हफ्ते दर्जनों अनुबंधों का विश्लेषण करता हूं। LocalPDF मुझे क्लाइंट डेटा को क्लाउड सर्वर पर एक्सपोज़ किए बिना मुख्य क्लॉज़ निकालने और कानूनी दस्तावेज़ों से चैट करने देता है। अटॉर्नी-क्लाइंट विशेषाधिकार बरकरार रहता है। कानूनी पेशेवरों के लिए AI टूल ऐसे ही काम करने चाहिए।\"",
-    "t2_text": "\"गोपनीय आय रिपोर्ट और वित्तीय विवरणों को क्लाउड AI से प्रोसेस करना हमारे लिए कभी विकल्प नहीं था। LocalPDF ने सब बदल दिया - मैं त्रैमासिक रिपोर्ट का सारांश बना सकता हूं, मुख्य मेट्रिक्स निकाल सकता हूं, और दस्तावेज़ों की तुलना कर सकता हूं। सब ऑफलाइन, सब प्राइवेट।\"",
-    "t3_text": "\"मैं हर साहित्य समीक्षा के लिए 50+ शोध पत्रों की समीक्षा करता हूं। LocalPDF PDFs के पूरे फ़ोल्डर का बैच-सारांश बनाता है, कार्यप्रणालियां निकालता है, और मुझे विशिष्ट विवरण खोजने के लिए पेपर्स से चैट करने देता है। यह हर सेमेस्टर मुझे हफ्तों का काम बचाता है। और यह पूरी तरह मुफ्त है।\""
+    "t1_text": "\"मैं हर हफ्ते दर्जनों अनुबंधों को संभालता हूं। LocalPDF मुझे क्लाइंट डेटा को क्लाउड सर्वर पर एक्सपोज़ किए बिना कानूनी दस्तावेज़ों को मर्ज, स्प्लिट, प्रोटेक्ट और वॉटरमार्क करने देता है। अटॉर्नी-क्लाइंट विशेषाधिकार बरकरार रहता है। कानूनी पेशेवरों के लिए PDF टूल ऐसे ही काम करने चाहिए।\"",
+    "t2_text": "\"गोपनीय आय रिपोर्ट और वित्तीय विवरणों को क्लाउड PDF टूल से प्रोसेस करना हमारे लिए कभी विकल्प नहीं था। LocalPDF ने सब बदल दिया — मैं कंप्रेस, एन्क्रिप्शन से प्रोटेक्ट और बैच प्रोसेस कर सकता हूं। सब ऑफलाइन, सब प्राइवेट।\"",
+    "t3_text": "\"मैं हर साहित्य समीक्षा के लिए 50+ शोध पत्रों को संभालता हूं। LocalPDF मुझे पूरे फ़ोल्डर को बैच कंप्रेस, संबंधित पेपर्स मर्ज, एनोटेशन जोड़ने और प्रेजेंटेशन को PDF में कन्वर्ट करने देता है। यह हर सेमेस्टर मुझे घंटों का काम बचाता है। और यह पूरी तरह मुफ्त है।\""
   },
   "faq": {
     "label": "सामान्य प्रश्न",
@@ -139,46 +139,43 @@
   "faq_items": {
     "q1": {
       "question": "यह पूरी तरह मुफ्त कैसे हो सकता है?",
-      "answer": "LocalPDF पूरी तरह से आपके डिवाइस पर चलता है, इसलिए हमें शून्य क्लाउड इंफ्रास्ट्रक्चर लागत है। कोई सर्वर नहीं, कोई बैंडविड्थ नहीं। हम मानते हैं कि AI सभी के लिए सुलभ होना चाहिए। हमारा कोड MIT लाइसेंस के तहत ओपन सोर्स है — इसे खुद ऑडिट करें।"
+      "answer": "LocalPDF पूरी तरह से आपके डिवाइस पर चलता है, इसलिए हमारे क्लाउड इंफ्रास्ट्रक्चर की लागत शून्य है। कोई सर्वर मेंटेन नहीं, कोई बैंडविड्थ नहीं। हम मानते हैं कि PDF टूल सभी के लिए सुलभ होने चाहिए। हमारा कोड MIT लाइसेंस के तहत ओपन सोर्स है — इसे खुद ऑडिट करें।"
     },
     "q2": {
-      "question": "AI विश्लेषण कितना सटीक है?",
-      "answer": "LocalPDF दस्तावेज़ समझ के लिए अनुकूलित अत्याधुनिक ओपन सोर्स AI मॉडल का उपयोग करता है। हालांकि क्लाउड सेवाएं बड़े मॉडल का उपयोग कर सकती हैं, हमारे लोकल मॉडल सारांश, Q&A, और डेटा निष्कर्षण के लिए उत्कृष्ट सटीकता प्रदान करते हैं — इस महत्वपूर्ण लाभ के साथ कि आपके दस्तावेज़ कभी आपके डिवाइस से नहीं जाते।"
+      "question": "कौन से PDF टूल शामिल हैं?",
+      "answer": "LocalPDF में 10 टूल शामिल हैं: कंप्रेस, बैच कंप्रेस, मर्ज, स्प्लिट, प्रोटेक्ट/अनलॉक (AES-256), वॉटरमार्क (टेक्स्ट और इमेज लाइव प्रीव्यू के साथ), इमेज से PDF, PDF से इमेज, PPT से PDF, और एनोटेशन, इरेज़र और सिग्नेचर सपोर्ट के साथ एक पूर्ण PDF पेज एडिटर।"
     },
     "q3": {
       "question": "क्या यह बिना इंटरनेट कनेक्शन के काम करेगा?",
-      "answer": "बिल्कुल! प्रारंभिक मॉडल डाउनलोड (एक बार, पहली बार चलाने पर होता है) के बाद, LocalPDF 100% ऑफलाइन काम करता है। हवाई जहाज़ में, दूरदराज़ के स्थानों में, या एयर-गैप्ड वातावरण में दस्तावेज़ों का विश्लेषण करें।"
+      "answer": "बिल्कुल! LocalPDF शुरू से ही 100% ऑफलाइन काम करता है। कोई डाउनलोड नहीं, कोई सेटअप नहीं, कोई इंटरनेट नहीं चाहिए। हवाई जहाज़ में, दूरदराज़ के स्थानों में, या एयर-गैप्ड वातावरण में दस्तावेज़ प्रोसेस करें।"
     },
     "q4": {
       "question": "क्या मैं इसे व्यावसायिक कार्य के लिए उपयोग कर सकता हूं?",
       "answer": "हां! LocalPDF MIT लाइसेंस प्राप्त है। व्यक्तिगत प्रोजेक्ट, क्लाइंट कार्य, या व्यावसायिक उत्पादों के लिए उपयोग करें। एट्रिब्यूशन आवश्यक नहीं (हालांकि हमेशा सराहनीय)।"
     },
     "q5": {
-      "question": "कौन से PDF फॉर्मेट और साइज समर्थित हैं?",
-      "answer": "LocalPDF किसी भी साइज के मानक PDF फाइलों को संभालता है — कोई पेज या फाइल साइज लिमिट नहीं। यह टेक्स्ट-आधारित PDFs, स्कैन किए गए दस्तावेज़ों (OCR के साथ), और इमेज और टेबल वाले मिश्रित-सामग्री PDFs के साथ काम करता है।"
+      "question": "कौन से PDF फॉर्मेट और साइज़ समर्थित हैं?",
+      "answer": "LocalPDF किसी भी साइज़ की मानक PDF फ़ाइलों को संभालता है — कोई पेज या फ़ाइल साइज़ लिमिट नहीं। यह टेक्स्ट-आधारित PDFs, इमेज-हैवी दस्तावेज़ों, और इमेज और टेबल वाले मिश्रित-सामग्री PDFs के साथ काम करता है।"
     },
     "q6": {
       "question": "सिस्टम आवश्यकताएं क्या हैं?",
-      "answer": "<strong>न्यूनतम:</strong> 8GB RAM, 10GB फ्री स्टोरेज, macOS 12+ या Windows 10+<br><strong>अनुशंसित:</strong> 16GB RAM, तेज़ प्रोसेसिंग के लिए Apple Silicon या NVIDIA GPU"
+      "answer": "<strong>न्यूनतम:</strong> 4GB RAM, 200MB फ्री स्टोरेज, macOS 11.0 (Big Sur) या बाद का<br><strong>अनुशंसित:</strong> 8GB RAM, बेहतर प्रदर्शन के लिए Apple Silicon। Windows और Linux जल्द आ रहे हैं।"
     }
   },
   "notify": {
-    "label": "जल्द आ रहा है",
-    "title": "पहले<br><span class='gradient-text'>जानने वाले बनें</span>",
-    "subtitle": "LocalPDF वर्तमान में विकास में है। GitHub रेपो को स्टार करें ताकि लॉन्च होने पर आपको सूचित किया जा सके।",
-    "star_title": "GitHub पर स्टार करें",
-    "star_desc": "LocalPDF लॉन्च होने पर सूचना प्राप्त करें",
-    "star_cta": "रिपॉजिटरी देखें",
-    "discuss_title": "चर्चाओं में शामिल हों",
-    "discuss_desc": "अपनी फीचर रिक्वेस्ट और आइडिया शेयर करें",
-    "discuss_cta": "चर्चा शुरू करें",
-    "planned_heading": "नियोजित सुविधाएं",
-    "planned1_label": "चैट",
-    "planned1_value": "PDFs के साथ प्राकृतिक भाषा Q&A",
-    "planned2_label": "सारांश",
-    "planned2_value": "किसी भी दस्तावेज़ का तुरंत सारांश",
-    "planned3_label": "निष्कर्षण",
-    "planned3_value": "दस्तावेज़ों से विशिष्ट डेटा खींचें"
+    "label": "डाउनलोड",
+    "title": "LocalPDF प्राप्त करें<br><span class='gradient-text'>हमेशा मुफ्त</span>",
+    "subtitle": "अपने प्लेटफ़ॉर्म के लिए LocalPDF डाउनलोड करें। एक ऐप, 10 शक्तिशाली PDF टूल, शून्य क्लाउड निर्भरता।",
+    "mac_title": "macOS के लिए डाउनलोड करें",
+    "mac_desc": "macOS 11.0+ • Apple Silicon नेटिव • 58 MB",
+    "win_title": "Windows",
+    "win_desc": "Windows 10+ • जल्द आ रहा है",
+    "linux_title": "Linux",
+    "linux_desc": "Ubuntu 22.04+ • जल्द आ रहा है",
+    "star_title": "सोर्स कोड देखें",
+    "star_desc": "MIT लाइसेंस • ओपन सोर्स",
+    "star_cta": "GitHub रिपॉजिटरी",
+    "planned_heading": "सिस्टम आवश्यकताएं"
   },
   "footer": {
     "tagline": "AI जो मुफ्त, निजी और आपका है।",
