--- a/localpdf/translations/ru.json
+++ b/localpdf/translations/ru.json
@@ -4,37 +4,37 @@
   "nav": {
     "features": "Возможности",
     "use_cases": "Применение",
-    "notify": "Уведомить",
+    "notify": "Скачать",
     "github": "GitHub"
   },
   "hero": {
-    "badge": "Скоро",
-    "title": "Ваши документы.<br>Ваша конфиденциальность.<br><span class='gradient-text'>Ваш ИИ-помощник.</span>",
-    "subtitle": "LocalPDF — это набор ИИ-инструментов для PDF, ставящий конфиденциальность на первое место. Общайтесь с PDF, извлекайте ключевые идеи, создавайте резюме документов — всё работает 100% на вашем устройстве. Без облака. Без загрузок. Без компромиссов.",
-    "cta_notify": "Уведомить о запуске",
+    "badge": "Уже доступно — Бесплатно и с открытым кодом",
+    "title": "Ваши документы.<br>Ваша конфиденциальность.<br><span class='gradient-text'>Ваш набор инструментов для PDF.</span>",
+    "subtitle": "LocalPDF — это полноценный набор инструментов для PDF с приоритетом конфиденциальности. Сжимайте, объединяйте, разделяйте, защищайте, добавляйте водяные знаки, конвертируйте и редактируйте ваши документы — всё работает на 100% на вашем устройстве. Без облака. Без загрузок. Без компромиссов.",
+    "cta_notify": "⬇ Скачать для macOS",
     "cta_features": "Обзор возможностей"
   },
   "social_proof": {
     "local": "Локальная обработка",
-    "chat": "Чат с PDF",
+    "tools": "Инструменты PDF",
     "free": "Бесплатно навсегда",
     "opensource": "Открытый код"
   },
   "product": {
     "label": "Продукт",
-    "title": "LocalPDF:<br><span class='gradient-text'>ИИ-инструменты для PDF, которые уважают вас</span>",
-    "subtitle": "Мощный набор ИИ-инструментов для PDF, работающий полностью на вашей машине. Облако не требуется.",
-    "feature1_title": "Чат с PDF",
-    "feature1_desc": "Задавайте вопросы о документах на естественном языке. Получайте ответы со ссылками на страницы.",
-    "feature2_title": "Умные резюме",
-    "feature2_desc": "Мгновенные резюме длинных документов. Извлечение ключевых моментов и выводов за секунды.",
-    "feature3_title": "Извлечение информации",
-    "feature3_desc": "Автоматическое извлечение данных из контрактов, счетов, отчётов.",
-    "feature4_title": "Пакетная обработка",
-    "feature4_desc": "Обрабатывайте несколько PDF сразу. Резюмируйте папку отчётов за один раз.",
-    "feature5_title": "Полная конфиденциальность",
-    "feature5_desc": "Работает полностью офлайн. Конфиденциальные документы остаются конфиденциальными.",
-    "usecases_heading": "Идеально для",
+    "title": "LocalPDF:<br><span class='gradient-text'>Инструменты PDF, которые уважают вас</span>",
+    "subtitle": "Мощный набор инструментов PDF, работающий полностью на вашей машине. Облако не требуется.",
+    "feature1_title": "Сжатие и пакетное сжатие",
+    "feature1_desc": "Уменьшайте PDF с помощью умных пресетов (Email, Web, Печать). Обрабатывайте сотни файлов за раз в пакетном режиме.",
+    "feature2_title": "Объединение и разделение",
+    "feature2_desc": "Объединяйте несколько PDF в один или разделяйте по страницам, диапазонам или на отдельные файлы. Перетаскивание для изменения порядка.",
+    "feature3_title": "Защита и водяные знаки",
+    "feature3_desc": "Добавляйте пароли AES-256, устанавливайте разрешения или накладывайте текстовые и графические водяные знаки с предпросмотром в реальном времени. Также разблокировка защищённых паролем PDF.",
+    "feature4_title": "Конвертация всего",
+    "feature4_desc": "Изображение в PDF, PDF в изображение (PNG/JPEG 72-600 DPI), PPT/PPTX в PDF. Перетаскивание нескольких изображений с поддержкой перестановки.",
+    "feature5_title": "Редактор страниц PDF",
+    "feature5_desc": "Редактируйте страницы PDF с аннотациями, ластиком, наложением текста, штампами изображений и поддержкой подписи. Полное управление страницами с вставкой и перестановкой.",
+    "usecases_heading": "10 инструментов в одном приложении",
     "usecase1": "Юридические документы",
     "usecase2": "Научные статьи",
     "usecase3": "Финансовые отчёты",
@@ -45,23 +45,23 @@
   "use_cases": {
     "label": "Применение",
     "title": "Создано для <span class='gradient-text'>настоящих профессионалов</span>",
-    "subtitle": "От юристов, защищающих данные клиентов, до исследователей, анализирующих статьи — LocalPDF обслуживает разнообразные потребности с одним главным обещанием: ваши документы остаются вашими."
+    "subtitle": "От юристов, защищающих данные клиентов, до исследователей, организующих статьи — LocalPDF обслуживает разнообразные потребности с одним главным обещанием: ваши документы остаются вашими."
   },
   "use_cases_cards": {
     "legal": {
-      "title": "Юристы",
-      "problem": "<strong>Проблема:</strong> Загрузка контрактов и показаний в облачные ИИ-сервисы ставит под угрозу адвокатскую тайну.",
-      "solution": "<strong>Решение:</strong> Анализируйте контракты, извлекайте пункты и резюмируйте показания полностью на своём устройстве. Нулевая утечка."
+      "title": "Юридические специалисты",
+      "problem": "<strong>Проблема:</strong> Загрузка контрактов и показаний в облачные PDF-сервисы ставит под угрозу адвокатскую тайну.",
+      "solution": "<strong>Решение:</strong> Объединяйте, разделяйте, защищайте и добавляйте водяные знаки к юридическим документам полностью на своём устройстве. Нулевая утечка."
     },
     "researchers": {
       "title": "Исследователи",
       "problem": "<strong>Проблема:</strong> Ручная проверка сотен научных статей занимает недели. Облачные инструменты компрометируют неопубликованные данные.",
-      "solution": "<strong>Решение:</strong> Пакетное резюмирование статей, извлечение методологий и приватный чат с документами. Идеально для обзоров литературы."
+      "solution": "<strong>Решение:</strong> Пакетное сжатие, объединение и аннотирование научных статей конфиденциально. Конвертация и организация документов без зависимости от облака."
     },
     "financial": {
       "title": "Финансовые аналитики",
-      "problem": "<strong>Проблема:</strong> Конфиденциальные финансовые отчёты и данные о доходах нельзя загружать в сторонние ИИ-сервисы.",
-      "solution": "<strong>Решение:</strong> Извлечение ключевых метрик, сравнение квартальных отчётов и генерация резюме без утечки данных с вашей машины."
+      "problem": "<strong>Проблема:</strong> Конфиденциальные финансовые отчёты и данные о доходах нельзя загружать в сторонние PDF-сервисы.",
+      "solution": "<strong>Решение:</strong> Сжимайте, защищайте шифрованием AES-256 и добавляйте водяные знаки к финансовым документам без утечки данных с вашей машины."
     },
     "healthcare": {
       "title": "Медицинские работники",
@@ -70,11 +70,11 @@
     },
     "students": {
       "title": "Студенты и преподаватели",
-      "problem": "<strong>Проблема:</strong> Облачные ИИ-подписки стоят $20-50 в месяц — слишком дорого для студентов.",
-      "solution": "<strong>Решение:</strong> Резюмируйте учебники, извлекайте ключевые концепции и готовьтесь к экзаменам. $0 навсегда."
+      "problem": "<strong>Проблема:</strong> Облачные PDF-подписки стоят $20-50 в месяц — слишком дорого для студентов.",
+      "solution": "<strong>Решение:</strong> Объединяйте конспекты лекций, сжимайте учебники, конвертируйте презентации в PDF и аннотируйте страницы. $0 навсегда."
     },
     "privacy": {
-      "title": "Сторонники конфиденциальности",
+      "title": "Пользователи, заботящиеся о конфиденциальности",
       "problem": "<strong>Проблема:</strong> Облачные PDF-инструменты хранят ваши документы на своих серверах бессрочно.",
       "solution": "<strong>Решение:</strong> Открытый исходный код, полностью проверяемый. Ваши документы никогда не касаются серверов. Точка."
     }
@@ -82,9 +82,9 @@
   "comparison": {
     "label": "Почему LocalPDF",
     "title": "LocalPDF против <span class='gradient-text'>облачных сервисов</span>",
-    "subtitle": "Сравните LocalPDF с популярными ИИ-сервисами для PDF: ChatPDF, PDF.ai, Adobe Acrobat AI.",
+    "subtitle": "Сравните LocalPDF с популярными облачными PDF-сервисами, такими как Adobe Acrobat, Smallpdf и iLovePDF.",
     "roi_title": "Рассчитайте вашу годовую экономию",
-    "roi_cloud": "Средний ИИ-сервис для PDF: <strong>$40/месяц x 12 = $480/год</strong>",
+    "roi_cloud": "Средний облачный PDF-сервис: <strong>$40/месяц x 12 = $480/год</strong>",
     "roi_localpdf": "LocalPDF: <strong>$0/год</strong>",
     "roi_savings": "Вы экономите: <span class='gradient-text'>$480+ каждый год</span>"
   },
@@ -116,21 +116,21 @@
   },
   "how_it_works": {
     "title": "Просто по замыслу",
-    "subtitle": "Без аккаунтов. Без загрузок. Без настройки. Скачайте, откройте PDF и начните общение.",
+    "subtitle": "Без аккаунтов. Без загрузок. Без настройки. Скачайте, поместите файлы и приступайте к работе.",
     "step1_title": "Скачать",
     "step1_desc": "Получите LocalPDF для вашей платформы. Одно приложение, готово к использованию.",
     "step2_title": "Открыть PDF",
     "step2_desc": "Перетащите документ в LocalPDF. Он никогда не покинет ваш компьютер.",
-    "step3_title": "Чат и анализ",
-    "step3_desc": "Задавайте вопросы, получайте резюме, извлекайте данные — всё обрабатывается локально."
+    "step3_title": "Обработать и сохранить",
+    "step3_desc": "Сжимайте, объединяйте, разделяйте, редактируйте, защищайте или конвертируйте — всё обрабатывается локально."
   },
   "testimonials": {
     "label": "Отзывы пользователей",
     "title": "Доверие <span class='gradient-text'>профессионалов по всей Индии</span>",
     "subtitle": "От юристов до финансовых аналитиков, LocalPDF обслуживает разнообразные потребности с одним главным обещанием: ваши документы остаются вашими.",
-    "t1_text": "\"Я анализирую десятки контрактов еженедельно. LocalPDF позволяет мне извлекать ключевые пункты и общаться с юридическими документами, не раскрывая данные клиентов облачным серверам. Адвокатская тайна сохраняется. Именно так должны работать ИИ-инструменты для юристов.\"",
-    "t2_text": "\"Обработка конфиденциальных отчётов о доходах и финансовых отчётов через облачный ИИ никогда не была для нас вариантом. LocalPDF всё изменил — я могу резюмировать квартальные отчёты, извлекать ключевые метрики и сравнивать документы. Всё офлайн, всё приватно.\"",
-    "t3_text": "\"Я проверяю 50+ научных статей для каждого обзора литературы. LocalPDF пакетно резюмирует целые папки PDF, извлекает методологии и позволяет мне общаться со статьями для поиска конкретных деталей. Это экономит мне недели работы каждый семестр. И это совершенно бесплатно.\""
+    "t1_text": "\"Я обрабатываю десятки контрактов еженедельно. LocalPDF позволяет мне объединять, разделять, защищать и добавлять водяные знаки к юридическим документам, не раскрывая данные клиентов облачным серверам. Адвокатская тайна сохраняется. Именно так должны работать PDF-инструменты для юристов.\"",
+    "t2_text": "\"Обработка конфиденциальных отчётов о доходах и финансовых отчётов через облачные PDF-инструменты никогда не была для нас вариантом. LocalPDF всё изменил — я могу сжимать, защищать шифрованием и пакетно обрабатывать документы. Всё офлайн, всё приватно.\"",
+    "t3_text": "\"Я обрабатываю 50+ научных статей для каждого обзора литературы. LocalPDF позволяет мне пакетно сжимать целые папки, объединять связанные статьи, добавлять аннотации и конвертировать презентации в PDF. Это экономит мне часы работы каждый семестр. И это совершенно бесплатно.\""
   },
   "faq": {
     "label": "Частые вопросы",
@@ -139,15 +139,15 @@
   "faq_items": {
     "q1": {
       "question": "Как это может быть полностью бесплатным?",
-      "answer": "LocalPDF работает полностью на вашем устройстве, поэтому у нас нулевые затраты на облачную инфраструктуру. Нет серверов, нет трафика. Мы считаем, что ИИ должен быть доступен каждому. Наш код — открытый исходный код под лицензией MIT — проверьте его сами."
+      "answer": "LocalPDF работает полностью на вашем устройстве, поэтому у нас нулевые затраты на облачную инфраструктуру. Нет серверов для обслуживания, нет пропускной способности для оплаты. Мы считаем, что инструменты для PDF должны быть доступны каждому. Наш код — открытый исходный код под лицензией MIT — проверьте его сами."
     },
     "q2": {
-      "question": "Насколько точен ИИ-анализ?",
-      "answer": "LocalPDF использует передовые ИИ-модели с открытым исходным кодом, оптимизированные для понимания документов. Хотя облачные сервисы могут использовать более крупные модели, наши локальные модели обеспечивают отличную точность для резюмирования, вопросов-ответов и извлечения данных — с критическим преимуществом: ваши документы никогда не покидают устройство."
+      "question": "Какие инструменты PDF включены?",
+      "answer": "LocalPDF включает 10 инструментов: Сжатие, Пакетное сжатие, Объединение, Разделение, Защита/Разблокировка (AES-256), Водяной знак (текст и изображение с предпросмотром), Изображение в PDF, PDF в изображение, PPT в PDF и полноценный Редактор страниц PDF с аннотациями, ластиком и поддержкой подписи."
     },
     "q3": {
       "question": "Работает ли это без интернета?",
-      "answer": "Абсолютно! После начальной загрузки модели (однократно, при первом запуске) LocalPDF работает 100% офлайн. Анализируйте документы в самолёте, в удалённых местах или в изолированных средах."
+      "answer": "Абсолютно! LocalPDF работает 100% офлайн сразу после установки. Никаких загрузок, настроек или интернета не требуется. Обрабатывайте документы в самолёте, в удалённых местах или в изолированных средах."
     },
     "q4": {
       "question": "Можно ли использовать для коммерческой работы?",
@@ -155,30 +155,27 @@
     },
     "q5": {
       "question": "Какие форматы и размеры PDF поддерживаются?",
-      "answer": "LocalPDF обрабатывает стандартные PDF-файлы любого размера — без лимитов страниц или размера. Работает с текстовыми PDF, отсканированными документами (с OCR) и PDF со смешанным содержимым, включающим изображения и таблицы."
+      "answer": "LocalPDF обрабатывает стандартные PDF-файлы любого размера — без лимитов страниц или размера файла. Работает с текстовыми PDF, документами с большим количеством изображений и PDF со смешанным содержимым, включающим изображения и таблицы."
     },
     "q6": {
       "question": "Каковы системные требования?",
-      "answer": "<strong>Минимум:</strong> 8 ГБ RAM, 10 ГБ свободного места, macOS 12+ или Windows 10+<br><strong>Рекомендуется:</strong> 16 ГБ RAM, Apple Silicon или NVIDIA GPU для ускоренной обработки"
+      "answer": "<strong>Минимум:</strong> 4 ГБ RAM, 200 МБ свободного места, macOS 11.0 (Big Sur) или новее<br><strong>Рекомендуется:</strong> 8 ГБ RAM, Apple Silicon для лучшей производительности. Windows и Linux скоро."
     }
   },
   "notify": {
-    "label": "Скоро",
-    "title": "Будьте первым,<br><span class='gradient-text'>кто узнает</span>",
-    "subtitle": "LocalPDF сейчас в разработке. Поставьте звезду репозиторию на GitHub, чтобы получить уведомление о запуске.",
-    "star_title": "Звезда на GitHub",
-    "star_desc": "Получите уведомление о запуске LocalPDF",
-    "star_cta": "Следить за репозиторием",
-    "discuss_title": "Присоединяйтесь к обсуждениям",
-    "discuss_desc": "Делитесь пожеланиями и идеями",
-    "discuss_cta": "Начать обсуждение",
-    "planned_heading": "Планируемые функции",
-    "planned1_label": "Чат",
-    "planned1_value": "Вопросы и ответы на естественном языке с PDF",
-    "planned2_label": "Резюме",
-    "planned2_value": "Мгновенные резюме любого документа",
-    "planned3_label": "Извлечение",
-    "planned3_value": "Извлечение конкретных данных из документов"
+    "label": "Скачать",
+    "title": "Получите LocalPDF<br><span class='gradient-text'>Бесплатно навсегда</span>",
+    "subtitle": "Скачайте LocalPDF для вашей платформы. Одно приложение, 10 мощных инструментов PDF, нулевая зависимость от облака.",
+    "mac_title": "Скачать для macOS",
+    "mac_desc": "macOS 11.0+ • Нативный Apple Silicon • 58 МБ",
+    "win_title": "Windows",
+    "win_desc": "Windows 10+ • Скоро",
+    "linux_title": "Linux",
+    "linux_desc": "Ubuntu 22.04+ • Скоро",
+    "star_title": "Просмотреть исходный код",
+    "star_desc": "Лицензия MIT • Открытый код",
+    "star_cta": "Репозиторий GitHub",
+    "planned_heading": "Системные требования"
   },
   "footer": {
     "tagline": "ИИ, который бесплатный, приватный и ваш.",
