--- a/translations/hi.json
+++ b/translations/hi.json
@@ -55,11 +55,11 @@
     "localwrite_feature2": "क्रिएटिविटी कंट्रोल स्लाइडर",
     "localwrite_feature3": "PDF दस्तावेज़ संवर्धन",
     "localwrite_feature4": "रियल-टाइम आँकड़े",
-    "localpdf_tagline": "AI-संचालित PDF टूल",
-    "localpdf_desc": "अपने दस्तावेज़ों से चैट करें, इनसाइट्स निकालें, और स्थानीय AI से PDF प्रोसेस करें। आपके संवेदनशील दस्तावेज़ पूरी तरह निजी रहते हैं।",
-    "localpdf_feature1": "PDF से चैट करें",
-    "localpdf_feature2": "मुख्य जानकारी निकालें",
-    "localpdf_feature3": "दस्तावेज़ सारांश",
+    "localpdf_tagline": "संपूर्ण PDF टूलकिट",
+    "localpdf_desc": "अपनी PDF फ़ाइलों को कंप्रेस, मर्ज, स्प्लिट, सुरक्षित, वॉटरमार्क, कन्वर्ट और एडिट करें। एक ऐप में 10 टूल, सब 100% आपके डिवाइस पर।",
+    "localpdf_feature1": "कंप्रेस, मर्ज और स्प्लिट",
+    "localpdf_feature2": "सुरक्षित, वॉटरमार्क और कन्वर्ट",
+    "localpdf_feature3": "PDF पेज एडिटर और एनोटेशन",
     "localpdf_feature4": "100% स्थानीय प्रोसेसिंग"
   },
   "why": {
