--- a/translations/ru.json
+++ b/translations/ru.json
@@ -55,11 +55,11 @@
     "localwrite_feature2": "Регулятор креативности",
     "localwrite_feature3": "Улучшение PDF-документов",
     "localwrite_feature4": "Статистика в реальном времени",
-    "localpdf_tagline": "AI-инструменты для PDF",
-    "localpdf_desc": "Общайтесь с документами, извлекайте данные и обрабатывайте PDF с помощью локального AI. Ваши конфиденциальные документы остаются полностью приватными.",
-    "localpdf_feature1": "Чат с PDF",
-    "localpdf_feature2": "Извлечение ключевой информации",
-    "localpdf_feature3": "Резюмирование документов",
+    "localpdf_tagline": "Полный набор инструментов для PDF",
+    "localpdf_desc": "Сжимайте, объединяйте, разделяйте, защищайте, добавляйте водяные знаки, конвертируйте и редактируйте PDF. 10 инструментов в одном приложении, всё 100% на вашем устройстве.",
+    "localpdf_feature1": "Сжатие, объединение и разделение",
+    "localpdf_feature2": "Защита, водяные знаки и конвертация",
+    "localpdf_feature3": "Редактор страниц PDF и аннотации",
     "localpdf_feature4": "100% локальная обработка"
   },
   "why": {
