--- a/localpdf/translations/zh.json
+++ b/localpdf/translations/zh.json
@@ -3,90 +3,90 @@
   "name": "中文",
   "nav": {
     "features": "功能",
-    "use_cases": "应用场景",
-    "notify": "通知我",
+    "use_cases": "使用场景",
+    "notify": "下载",
     "github": "GitHub"
   },
   "hero": {
-    "badge": "即将推出",
-    "title": "您的文档。<br>您的隐私。<br><span class='gradient-text'>您的AI助手。</span>",
-    "subtitle": "LocalPDF是一套以隐私为先的AI驱动PDF工具。与PDF对话、提取关键洞察、生成文档摘要——100%在您的设备上运行。无需云端。无需上传。绝不妥协。",
-    "cta_notify": "发布时通知我",
-    "cta_features": "了解功能"
+    "badge": "现已推出 — 免费且开源",
+    "title": "你的文档。<br>你的隐私。<br><span class='gradient-text'>你的PDF工具箱。</span>",
+    "subtitle": "LocalPDF是一款完整的、隐私优先的PDF工具箱。压缩、合并、拆分、保护、加水印、转换和编辑你的文档 — 100%在你的设备上运行。无云端。无上传。无妥协。",
+    "cta_notify": "⬇ 下载 macOS 版",
+    "cta_features": "探索功能"
   },
   "social_proof": {
     "local": "本地处理",
-    "chat": "PDF对话",
+    "tools": "PDF工具",
     "free": "永久免费",
     "opensource": "开源"
   },
   "product": {
     "label": "产品",
-    "title": "LocalPDF：<br><span class='gradient-text'>尊重您的AI PDF工具</span>",
-    "subtitle": "完全在您的设备上运行的强大AI驱动PDF工具套件。无需云端。",
-    "feature1_title": "PDF对话",
-    "feature1_desc": "用自然语言提问文档内容。获取带页码引用的精确答案。",
-    "feature2_title": "智能摘要",
-    "feature2_desc": "长文档即时摘要。数秒内提取要点和关键结论。",
-    "feature3_title": "信息提取",
-    "feature3_desc": "从合同、发票和报告中自动提取结构化数据。",
-    "feature4_title": "批量处理",
-    "feature4_desc": "同时处理多个PDF。一次性摘要整个文件夹的报告。",
-    "feature5_title": "完全隐私",
-    "feature5_desc": "完全离线运行。敏感文档始终保持机密。",
-    "usecases_heading": "适用场景",
+    "title": "LocalPDF：<br><span class='gradient-text'>尊重你的PDF工具</span>",
+    "subtitle": "一套完全在你的设备上运行的强大PDF工具。无需云端。",
+    "feature1_title": "压缩和批量压缩",
+    "feature1_desc": "使用智能预设（邮件、网页、打印）缩小PDF。通过批量模式一次处理数百个文件。",
+    "feature2_title": "合并和拆分",
+    "feature2_desc": "将多个PDF合并为一个，或按页面、范围或拆分为单个文件。拖放排序。",
+    "feature3_title": "保护和水印",
+    "feature3_desc": "添加AES-256密码，设置权限，或叠加文本和图像水印并实时预览。也可解锁受密码保护的PDF。",
+    "feature4_title": "全能转换",
+    "feature4_desc": "图像转PDF、PDF转图像（PNG/JPEG 72-600 DPI）、PPT/PPTX转PDF。拖放多个图像并支持重新排序。",
+    "feature5_title": "PDF页面编辑器",
+    "feature5_desc": "使用注释、橡皮擦工具、文本叠加、图像印章和签名支持编辑PDF页面。完整的页面管理，包括插入和重新排序。",
+    "usecases_heading": "一个应用10个工具",
     "usecase1": "法律文件",
-    "usecase2": "学术论文",
+    "usecase2": "研究论文",
     "usecase3": "财务报告",
-    "usecase4": "合同文书",
+    "usecase4": "合同",
     "usecase5": "医疗记录",
     "usecase6": "+ 更多"
   },
   "use_cases": {
-    "label": "应用场景",
+    "label": "使用场景",
     "title": "为<span class='gradient-text'>真正的专业人士</span>打造",
-    "subtitle": "从保护客户数据的律师到分析论文的研究人员——LocalPDF以一个核心承诺满足多样化需求：您的文档始终属于您。"
+    "subtitle": "从保护客户数据的律师到整理论文的研究人员 — LocalPDF以一个核心承诺满足多样化需求：你的文档始终属于你。"
   },
   "use_cases_cards": {
     "legal": {
       "title": "法律专业人士",
-      "problem": "<strong>问题：</strong>将合同和证词上传到云端AI服务会危及律师-客户保密特权。",
-      "solution": "<strong>解决方案：</strong>在您自己的设备上分析合同、提取条款和摘要证词。零数据泄露。"
+      "problem": "<strong>痛点：</strong>将合同和证词上传到云端PDF服务会危及律师-客户保密特权。",
+      "solution": "<strong>解决方案：</strong>在你的设备上完成法律文件的合并、拆分、保护和水印。零暴露。"
     },
     "researchers": {
       "title": "研究人员",
-      "problem": "<strong>问题：</strong>手动审阅数百篇学术论文需要数周。云端工具会泄露未发表的研究数据。",
-      "solution": "<strong>解决方案：</strong>批量摘要论文、提取方法论并与文档私密对话。文献综述的理想之选。"
+      "problem": "<strong>痛点：</strong>手动审阅数百篇研究论文需要数周。云端工具会危及未发表的数据。",
+      "solution": "<strong>解决方案：</strong>私密地批量压缩、合并和注释研究论文。无需依赖云端即可转换和整理文档。"
     },
     "financial": {
       "title": "金融分析师",
-      "problem": "<strong>问题：</strong>机密财务报告和收益数据不能上传到第三方AI服务。",
-      "solution": "<strong>解决方案：</strong>提取关键指标、比较季度报告并生成摘要，数据永不离开您的设备。"
+      "problem": "<strong>痛点：</strong>机密的财务报告和收益不能上传到第三方PDF服务。",
+      "solution": "<strong>解决方案：</strong>使用AES-256加密压缩、保护和添加水印，数据不会离开你的设备。"
     },
     "healthcare": {
-      "title": "医疗专业人员",
-      "problem": "<strong>问题：</strong>HIPAA和数据保护法规禁止将患者记录上传到云端服务。",
-      "solution": "<strong>解决方案：</strong>在本地处理医疗PDF。自动符合数据保护合规要求。"
+      "title": "医疗专业人士",
+      "problem": "<strong>痛点：</strong>HIPAA和数据保护法规禁止将患者记录上传到云端服务。",
+      "solution": "<strong>解决方案：</strong>在本地处理医疗PDF。自动符合数据保护法规。"
     },
     "students": {
       "title": "学生和教育工作者",
-      "problem": "<strong>问题：</strong>云端AI订阅费每月$20-50——学生预算难以承受。",
-      "solution": "<strong>解决方案：</strong>摘要教科书、提取关键概念、备考——永久$0。"
+      "problem": "<strong>痛点：</strong>云端PDF订阅每月$20-50 — 对学生来说太贵了。",
+      "solution": "<strong>解决方案：</strong>合并课堂笔记、压缩教材、将演示文稿转换为PDF、注释页面。永久$0。"
     },
     "privacy": {
-      "title": "隐私倡导者",
-      "problem": "<strong>问题：</strong>云端PDF工具将您的文档无限期存储在其服务器上。",
-      "solution": "<strong>解决方案：</strong>开源代码，完全可审计。您的文档永远不会触及任何服务器。"
+      "title": "注重隐私的用户",
+      "problem": "<strong>痛点：</strong>云端PDF工具将你的文档无限期地存储在他们的服务器上。",
+      "solution": "<strong>解决方案：</strong>开源，完全可审计。你的文档永远不会接触任何服务器。"
     }
   },
   "comparison": {
     "label": "为什么选择LocalPDF",
-    "title": "LocalPDF 对比 <span class='gradient-text'>云端服务</span>",
-    "subtitle": "将LocalPDF与流行的AI PDF服务进行比较：ChatPDF、PDF.ai、Adobe Acrobat AI。",
-    "roi_title": "计算您的年度节省",
-    "roi_cloud": "AI PDF服务平均价格：<strong>$40/月 x 12 = $480/年</strong>",
+    "title": "LocalPDF vs <span class='gradient-text'>云端服务</span>",
+    "subtitle": "看看LocalPDF与Adobe Acrobat、Smallpdf和iLovePDF等热门云端PDF服务的比较。",
+    "roi_title": "计算你的年度节省",
+    "roi_cloud": "平均云端PDF服务：<strong>$40/月 x 12 = $480/年</strong>",
     "roi_localpdf": "LocalPDF：<strong>$0/年</strong>",
-    "roi_savings": "您节省：<span class='gradient-text'>每年$480以上</span>"
+    "roi_savings": "你节省：<span class='gradient-text'>每年$480以上</span>"
   },
   "comparison_table": {
     "header_feature": "功能",
@@ -96,7 +96,7 @@
     "row1_cloud": "$20-100/月",
     "row1_localpdf": "永久$0",
     "row2_feature": "文档隐私",
-    "row2_cloud": "上传至服务器",
+    "row2_cloud": "上传到服务器",
     "row2_localpdf": "永不离开设备",
     "row3_feature": "页数限制",
     "row3_cloud": "50-500页/月",
@@ -104,84 +104,81 @@
     "row4_feature": "文件大小限制",
     "row4_cloud": "10-50 MB",
     "row4_localpdf": "无限制",
-    "row5_feature": "需要网络",
-    "row5_cloud": "始终需要",
-    "row5_localpdf": "离线运行",
+    "row5_feature": "需要联网",
+    "row5_cloud": "是的，始终需要",
+    "row5_localpdf": "离线可用",
     "row6_feature": "数据保留",
     "row6_cloud": "无限期存储",
-    "row6_localpdf": "零存储",
+    "row6_localpdf": "不存储任何数据",
     "row7_feature": "开源",
-    "row7_cloud": "专有软件",
+    "row7_cloud": "专有",
     "row7_localpdf": "MIT许可证"
   },
   "how_it_works": {
-    "title": "设计至简",
-    "subtitle": "无需账户。无需上传。无需配置。下载、打开PDF、开始对话。",
+    "title": "简约设计",
+    "subtitle": "无需账户。无需上传。无需配置。下载、拖入文件、开始工作。",
     "step1_title": "下载",
-    "step1_desc": "获取适用于您平台的LocalPDF。一个应用，即装即用。",
+    "step1_desc": "获取适用于你平台的LocalPDF。一个应用，即刻可用。",
     "step2_title": "打开PDF",
-    "step2_desc": "将文档拖入LocalPDF。它永远不会离开您的电脑。",
-    "step3_title": "对话与分析",
-    "step3_desc": "提问、获取摘要、提取数据——一切在本地处理。"
+    "step2_desc": "将文档拖入LocalPDF。它永远不会离开你的电脑。",
+    "step3_title": "处理和保存",
+    "step3_desc": "压缩、合并、拆分、编辑、保护或转换 — 全部在本地处理。"
   },
   "testimonials": {
     "label": "用户评价",
-    "title": "深受<span class='gradient-text'>印度各地专业人士</span>信赖",
-    "subtitle": "从律师到金融分析师，LocalPDF以一个核心承诺满足多样化需求：您的文档始终属于您。",
-    "t1_text": "\"我每周分析数十份合同。LocalPDF让我能够提取关键条款并与法律文件对话，而无需将客户数据暴露给云端服务器。律师-客户保密特权得到维护。这才是AI法律工具应有的工作方式。\"",
-    "t2_text": "\"通过云端AI处理机密收益报告和财务报表对我们来说从来不是选项。LocalPDF改变了一切——我可以摘要季度报告、提取关键指标和比较文档。全部离线，全部私密。\"",
-    "t3_text": "\"每次文献综述我需要审阅50多篇学术论文。LocalPDF批量摘要整个PDF文件夹、提取方法论，并让我与论文对话以查找具体细节。每学期为我节省数周工作时间。而且完全免费。\""
+    "title": "受到<span class='gradient-text'>全印度专业人士</span>的信赖",
+    "subtitle": "从律师到金融分析师，LocalPDF以一个核心承诺满足多样化需求：你的文档始终属于你。",
+    "t1_text": "\"我每周处理数十份合同。LocalPDF让我无需将客户数据暴露给云端服务器，即可合并、拆分、保护和添加水印到法律文件。律师-客户保密特权得到保障。法律专业人士的PDF工具就应该这样运作。\"",
+    "t2_text": "\"通过云端PDF工具处理机密的收益报告和财务报表对我们来说从来都不是选项。LocalPDF改变了一切 — 我可以压缩、加密保护和批量处理文档。全部离线，全部私密。\"",
+    "t3_text": "\"每次文献综述我都要处理50多篇研究论文。LocalPDF让我能够批量压缩整个文件夹、合并相关论文、添加注释、将演示文稿转换为PDF。每学期节省数小时的工作。而且完全免费。\""
   },
   "faq": {
     "label": "常见问题",
-    "title": "常见<span class='gradient-text'>问题解答</span>"
+    "title": "常见<span class='gradient-text'>问题</span>"
   },
   "faq_items": {
     "q1": {
-      "question": "为什么可以完全免费？",
-      "answer": "LocalPDF完全在您的设备上运行，因此我们的云基础设施成本为零。没有服务器，没有流量。我们相信AI应该对每个人开放。我们的代码以MIT许可证开源——欢迎自行验证。"
+      "question": "怎么能做到完全免费？",
+      "answer": "LocalPDF完全在你的设备上运行，因此我们没有任何云基础设施成本。无需维护服务器，无需支付带宽费用。我们相信PDF工具应该让每个人都能使用。我们的代码是MIT许可证下的开源软件 — 你可以自行审计。"
     },
     "q2": {
-      "question": "AI分析的准确度如何？",
-      "answer": "LocalPDF使用针对文档理解优化的先进开源AI模型。虽然云端服务可能使用更大的模型，但我们的本地模型在摘要、问答和数据提取方面提供出色的准确度——关键优势在于：您的文档永远不会离开设备。"
+      "question": "包含哪些PDF工具？",
+      "answer": "LocalPDF包含10个工具：压缩、批量压缩、合并、拆分、保护/解锁（AES-256）、水印（文本和图像，带实时预览）、图像转PDF、PDF转图像、PPT转PDF，以及带注释、橡皮擦和签名支持的完整PDF页面编辑器。"
     },
     "q3": {
-      "question": "可以完全离线工作吗？",
-      "answer": "当然可以！初始模型下载后（首次启动时一次性完成），LocalPDF即可100%离线运行。在飞机上、偏远地区或隔离环境中分析文档都不成问题。"
+      "question": "没有网络连接也能用吗？",
+      "answer": "当然可以！LocalPDF开箱即用，100%离线工作。无需下载、无需设置、无需联网。在飞机上、偏远地区或隔离环境中处理文档都没问题。"
     },
     "q4": {
       "question": "可以用于商业工作吗？",
-      "answer": "可以！LocalPDF采用MIT许可证。用于个人项目、客户工作或商业产品均可。无需署名（但我们一直欢迎）。"
+      "answer": "可以！LocalPDF采用MIT许可证。可用于个人项目、客户工作或商业产品。无需署名（但我们随时欢迎）。"
     },
     "q5": {
       "question": "支持哪些PDF格式和大小？",
-      "answer": "LocalPDF可处理任意大小的标准PDF文件——无页数或文件大小限制。支持文本PDF、扫描文档（带OCR）以及包含图片和表格的混合内容PDF。"
+      "answer": "LocalPDF处理任意大小的标准PDF文件 — 没有页数或文件大小限制。支持文本PDF、图像密集型文档以及包含图像和表格的混合内容PDF。"
     },
     "q6": {
       "question": "系统要求是什么？",
-      "answer": "<strong>最低配置：</strong>8 GB RAM、10 GB可用空间、macOS 12+或Windows 10+<br><strong>推荐配置：</strong>16 GB RAM、Apple Silicon或NVIDIA GPU以加速处理"
+      "answer": "<strong>最低配置：</strong>4GB内存、200MB可用存储空间、macOS 11.0（Big Sur）或更高版本<br><strong>推荐配置：</strong>8GB内存、Apple Silicon以获得最佳性能。Windows和Linux版本即将推出。"
     }
   },
   "notify": {
-    "label": "即将推出",
-    "title": "成为第一个<br><span class='gradient-text'>知道的人</span>",
-    "subtitle": "LocalPDF正在开发中。在GitHub上给仓库加星标，以便在发布时收到通知。",
-    "star_title": "GitHub加星",
-    "star_desc": "在LocalPDF发布时获得通知",
-    "star_cta": "关注仓库",
-    "discuss_title": "加入讨论",
-    "discuss_desc": "分享您的功能需求和想法",
-    "discuss_cta": "开始讨论",
-    "planned_heading": "计划功能",
-    "planned1_label": "对话",
-    "planned1_value": "用自然语言与PDF问答",
-    "planned2_label": "摘要",
-    "planned2_value": "任何文档的即时摘要",
-    "planned3_label": "提取",
-    "planned3_value": "从文档中提取特定数据"
+    "label": "下载",
+    "title": "获取LocalPDF<br><span class='gradient-text'>永久免费</span>",
+    "subtitle": "下载适用于你平台的LocalPDF。一个应用，10个强大的PDF工具，零云依赖。",
+    "mac_title": "下载 macOS 版",
+    "mac_desc": "macOS 11.0+ • Apple Silicon 原生 • 58 MB",
+    "win_title": "Windows",
+    "win_desc": "Windows 10+ • 即将推出",
+    "linux_title": "Linux",
+    "linux_desc": "Ubuntu 22.04+ • 即将推出",
+    "star_title": "查看源代码",
+    "star_desc": "MIT许可证 • 开源",
+    "star_cta": "GitHub仓库",
+    "planned_heading": "系统要求"
   },
   "footer": {
-    "tagline": "免费、私密、属于您的AI。",
+    "tagline": "免费、私密、属于你的AI。",
     "products_title": "产品",
     "community_title": "社区",
     "discussions": "讨论区",
@@ -189,6 +186,6 @@
     "privacy": "隐私政策",
     "license": "MIT许可证",
     "copyright": "&copy; 2025 Svetozar Technologies",
-    "footer_tagline": "构建服务人类而非企业的AI。"
+    "footer_tagline": "打造服务于人类而非企业的AI。"
   }
 }
